--- a/public/assets/css/ajax.css
+++ b/public/assets/css/ajax.css
@@ -1,17 +1,42 @@
 .modal-overlay{
-
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.5);
+	z-index: 4;
 }
 
 .modal-window{
- 	width: 250px;
+	position: absolute;
+	top: 140px;
+	left: 50%;
+ 	width: 300px;
  	height: auto;
- 	
+ 	margin-left: -150px;
+ 	padding: 20px;
+ 	border: 2px solid #000;
+ 	z-index: 5;
+ 	background-color: #FFF;
+ 	box-shadow: 0 0 14px #123;
 }
 
 .modal-close-btn{
-
+	position: absolute;
+	top: 0;
+	right: 4px;
+	padding: 0;
+	text-decoration: none;
+	color: black;
+	font-size: 16px;
 }
 
 .modal-close-btn:before{
-
+	position: relative;
+	top: -1px;
+	content: "Close";
+	text-transform: uppercase;
+	font-size: 10px;
 }
